# Sourcetrail-TS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DOCUMENTATION.md  README.md  Sourcetrail.srctrl.toml  TicTacToe.srctrl.toml  init_repository.py  vcpkg.json
src/agent_mcp_bridge/: .gitignore  AgentMcpBridge.srctrl.toml  Cargo.toml  README.md  build.rs
src/agent_mcp_bridge/src/: instance.rs  ipc.rs  lib.rs  protocol.rs
src/app/: ApplicationSettingsPrefiller.cpp  ApplicationSettingsPrefiller.h  CMakeLists.txt  main.cpp
src/cxx_modules_poc/: CMakeLists.txt  SrctrlModule.h  ping_main.cpp  srctrl_ping.cppm  srctrl_ping.h
src/indexer/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/app/: Application.cpp  Application.h  LanguagePackageSwift.h  LanguagePackageZig.cpp
src/lib/app/paths/: AppPath.cpp  AppPath.h  ResourcePaths.cpp  UserPaths.cpp
src/lib/component/: ComponentManager.cpp
src/lib/component/controller/: ActivationController.cpp  BookmarkController.cpp  CodeController.cpp  ErrorController.cpp  ErrorController.h  GraphController.cpp  IDECommunicationController.cpp  IDECommunicationController.h  TabsController.cpp  TabsController.h  UndoRedoController.cpp
src/lib/component/view/: GraphViewStyle.cpp
src/lib/data/: DefinitionKind.inl  ErrorCountInfo.h  ErrorFilter.h  ErrorInfo.h  NodeKind.cpp  NodeKind.h  NodeKind.inl  NodeType.cpp  NodeType.h  NodeType.inl  NodeTypeSet.cpp  NodeTypeSet.inl  TaskFinishParsing.cpp  TaskInjectStorage.cpp  TaskMergeStorages.cpp  TaskMergeStorages.h  srctrl_data-graph.cppm  srctrl_data-location.cppm  srctrl_data-name.cppm  srctrl_data-search.cppm  srctrl_data-tooltip.cppm  srctrl_data-types.cppm  srctrl_data.cppm
src/lib/data/graph/: Edge.h  ElementComponentKind.cpp  ElementComponentKind.h  ElementComponentKind.inl  Graph.h  Graph.inl  Node.cpp  Node.h  Node.inl  Token.cpp  Token.h
src/lib/data/indexer/: CombinedIndexerCommandProvider.cpp  CombinedIndexerCommandProvider.h  Indexer.h  IndexerBase.h  IndexerClusterPlan.cpp  IndexerClusterPlan.h  IndexerCommand.h  IndexerCommandCustom.cpp  IndexerCommandRust.cpp  IndexerCommandRust.h  IndexerCommandSwift.cpp  IndexerCommandSwift.h  IndexerCommandType.cpp  IndexerCommandType.h  IndexerCommandZig.cpp  (+6 more)
src/lib/project/: BuildModelSnapshot.h  Project.cpp  Project.h  RefreshInfoGenerator.cpp  ShardConfig.h  SourceGroup.cpp  SourceGroup.h  SourceGroupFactoryModuleRust.cpp  SourceGroupFactoryModuleRust.h  SourceGroupFactoryModuleSwift.cpp  SourceGroupFactoryModuleSwift.h  SourceGroupFactoryModuleZig.cpp  SourceGroupRust.cpp  SourceGroupRust.h  SourceGroupSwift.cpp  SourceGroupSwift.h  SourceGroupZig.cpp
src/lib/settings/: ApplicationSettings.cpp  ApplicationSettings.h  ApplicationSettingsPrefiller.cpp  ColorScheme.cpp  LanguageType.cpp  LanguageType.h  ProjectSettings.cpp  ProjectSettings.h  Settings.cpp  ToolChain.cpp  ToolChain.h
src/lib/utility/: ConfigManager.cpp  ConfigManager.h  OrderedCache.h  Platform.cpp  Platform.h  Property.h  QtResources.cpp  Status.h  TimeStamp.cpp  TimeStamp.h  Tree.h  UnorderedCache.h  qtScaleFactor.cpp  srctrl_utility-cache.cppm  srctrl_utility-enum.cppm  srctrl_utility-math.cppm  srctrl_utility-time.cppm  srctrl_utility.cppm  tracing.cpp  utilityEnum.h  utilityString.cpp  utilityString.h  utilityString.inl  utilityUuid.cpp  utilityUuid.h
src/lib_aidkit/: CMakeLists.txt  aidkit.cppm
src/lib_aidkit/aidkit/: enum_class.hpp  thread_shared.hpp
src/lib_cxx/: CMakeLists.txt  LanguagePackageCxx.h  LanguagePackageCxx.inl  srctrl_cxx-package.cppm  srctrl_cxx.cppm
src/lib_cxx/project/: CxxModulePrebuildRunner.cpp  CxxModulePrebuildRunner.h  CxxModulePrebuildRunner.inl  CxxModulePrebuilder.cpp  CxxModulePrebuilder.h  CxxPchBuildRunner.cpp  CxxPchBuildRunner.h  CxxPchBuildRunner.inl  SourceGroupCxxCMakeFileAPI.cpp  SourceGroupCxxCMakeFileAPI.h  SourceGroupCxxCdb.cpp  SourceGroupCxxCdb.h  SourceGroupCxxEmpty.cpp  SourceGroupFactoryModuleCxx.cpp  utilitySourceGroupCxx.cpp  utilitySourceGroupCxx.h
src/lib_cxx/utility/: CdbLoad.h  CdbLoad.inl  CompilationDatabase.h  CompilationDatabase.inl  IncludeProcessing.cpp
src/lib_gui/: CMakeLists.txt
src/lib_gui/platform/: setupApp.cpp
src/lib_gui/qt/: QtApplication.cpp  QtCoreApplication.cpp  QtCoreApplication.h
src/lib_gui/utility/: utilityApp.cpp  utilityApp.h  utilityPathDetection.cpp
src/rust_indexer/indexer/: Cargo.toml  build.rs
src/test/: CMakeFileAPIReaderTestSuite.cpp  CMakeLists.txt  Catch2.cpp  ClangCompatTestSuite.cpp  CommandlineTestSuite.cpp  ConcurrentStorageIndexTestSuite.cpp  ConcurrentTursoWriterTestSuite.cpp  ConfigManagerTestSuite.cpp  CxxIncludeProcessingTestSuite.cpp  CxxParserTestSuite.cpp  CxxTypeNameTestSuite.cpp  FileManagerTestSuite.cpp  FilePathFilterTestSuite.cpp  FilePathTestSuite.cpp  FileSystemTestSuite.cpp  GraphTestSuite.cpp  HierarchyCacheTestSuite.cpp  IndexerClusterPlanTestSuite.cpp  IpcIntegrationTestSuite.cpp  IpcSerializerTestSuite.cpp  IpcSharedMemoryTestSuite.cpp  LibcxxCompatTestSuite.cpp  LogManagerTestSuite.cpp  LowMemoryStringMapTestSuite.cpp  MatrixBaseTestSuite.cpp  MatrixDynamicBaseTestSuite.cpp  MessageQueueTestSuite.cpp  QtResourcesTestSuite.cpp  RefreshInfoGeneratorTestSuite.cpp  SearchIndexTestSuite.cpp  SettingsTestSuite.cpp  ShardConfigTestSuite.cpp  Snippet.cpp  SourceGroupCxxTestSuite.cpp  SourceGroupTestSuite.cpp  SourceLocationCollectionTestSuite.cpp  SqliteBookmarkStorageTestSuite.cpp  SqliteIndexStorageTestSuite.cpp  StorageProviderTestSuite.cpp  StorageTestSuite.cpp  (+8 more)
src/test/helper/: OptionalCxxTestUtils.cpp  OptionalCxxTestUtils.h  OptionalRustTestUtils.cpp  OptionalRustTestUtils.h  OptionalSwiftTestUtils.cpp  OptionalSwiftTestUtils.h  TestFileRegister.cpp  TestStorage.cpp  TestStorage.h
src/test_aidkit/: CMakeLists.txt  enum_class_test.cpp  thread_shared_test.cpp
src/test_aidkit/qt/: StringsTest.cpp
src/turso_shim/: Cargo.toml
src/turso_shim/src/: lib.rs
testing/cxx_modules/: .gitignore  CMakeLists.txt  CMakePresets.json  cxx_modules_test.srctrl.toml
testing/cxx_modules/src/: hello.cppm  main.cpp
(+1288 files in other folders)
